Closed Bug 35954 Opened 24 years ago Closed 24 years ago

Frequent crash in clipboard

Categories

(Core :: XUL, defect, P3)

x86
Linux
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: rzach, Assigned: pavlov)

References

Details

(Keywords: crash)

Pavlov, you touched the clipboard code yesterday, so you get this.

To reproduce:
1. Start browser (seems to happen less frequently when the browser's been
runnign for a while)
2. Double-click in URL bar to select
3. Hit backsapce to clear URL bar
4. Type "mozilla.org"
5. Hit Enter (or double click)

Actual result: Segfault.
Expected result: Mozilla.org is loaded

Linux build 2000.04.


->>>>>>>>>>>>>> Write Clipboard to memory
->>>>>>>>>>>>>> Write Clipboard to memory
->>>>>>>>>>>>>> Write Clipboard to memory

Program received signal SIGSEGV, Segmentation fault.
[Switching to Thread 882]

Program received signal SIGSEGV, Segmentation fault.
0x405b0112 in g_list_last ()
(gdb) where
#0  0x405b0112 in g_list_last ()
#1  0x405afd0b in g_list_append ()
#2  0x40500f03 in gtk_target_list_add ()
#3  0x405013f4 in gtk_selection_add_target ()
#4  0x41434df6 in nsClipboard::RegisterFormat ()
#5  0x414343f8 in nsClipboard::SetNativeClipboardData ()
#6  0x4144c844 in nsBaseClipboard::SetData ()
#7  0x40d16e6f in NSGetModule ()
#8  0x40d419cf in NSGetModule ()
#9  0x40d466c4 in NSGetModule ()
#10 0x413a8176 in NSGetModule ()
#11 0x413d8797 in NSGetModule ()
#12 0x413a490f in NSGetModule ()
#13 0x413f783d in NSGetModule ()
#14 0x40c558a6 in NSGetModule ()
#15 0x40c55bc9 in NSGetModule ()
#16 0x40bdd79a in NSGetModule ()
#17 0x40bdfe95 in NSGetModule ()
#18 0x401fbeeb in NS_NewScriptDocumentType ()
#19 0x400646cf in js_Invoke ()
#20 0x4006b252 in js_Interpret ()
#21 0x4006471a in js_Invoke ()
#22 0x40428306 in NSGetModule ()
#23 0x40426df7 in NSGetModule ()
#24 0x4011074a in XPTC_InvokeByIndex ()
#25 0x401108ba in nsXPTCStubBase::Stub9 ()
#26 0x40fef817 in NSGetModule ()
#27 0x410a02ce in NSGetModule ()
#28 0x40195ea2 in nsWebShell::OnStartDocumentLoad ()
#29 0x40764f1a in NSGetModule ()
#30 0x40764d01 in NSGetModule ()
#31 0x406cfcf7 in NSGetModule ()
#32 0x4070be04 in NSGetModule ()
#33 0x4070a5bd in NSGetModule ()
#34 0x40762931 in NSGetModule ()
#35 0x40763a9b in NSGetModule ()
#36 0x40763599 in NSGetModule ()
#37 0x401af22c in nsDocShell::DoURILoad ()
#38 0x40194189 in nsWebShell::DoLoadURL ()
#39 0x401949af in nsWebShell::LoadURI ()
#40 0x401950e5 in nsWebShell::LoadURL ()
#41 0x40194310 in nsWebShell::LoadURI ()
#42 0x40fee901 in NSGetModule ()
#43 0x40110535 in XPTC_InvokeByIndex ()
#44 0x4042b376 in NSGetModule ()
#45 0x4042c450 in NSGetModule ()
#46 0x400646cf in js_Invoke ()
#47 0x4006b252 in js_Interpret ()
#48 0x4006471a in js_Invoke ()
#49 0x400648fc in js_InternalInvoke ()
#50 0x4004c6df in JS_CallFunctionValue ()
#51 0x401dbf4e in nsJSContext::CallEventHandler ()
#52 0x402019d9 in nsJSEventListener::HandleEvent ()
#53 0x40b61a3a in NSGetModule ()
#54 0x40b623c2 in NSGetModule ()
#55 0x40d31f1e in NSGetModule ()
#56 0x40bde60d in NSGetModule ()
#57 0x40c5b08e in NSGetModule ()
#58 0x40c5b2a6 in NSGetModule ()
#59 0x40b62326 in NSGetModule ()
#60 0x40d21022 in NSGetModule ()
#61 0x40d31f80 in NSGetModule ()
#62 0x40bd6c9f in NSGetModule ()
#63 0x40d31f80 in NSGetModule ()
#64 0x40bbd3ef in NSGetModule ()
#65 0x40d2fa76 in NSGetModule ()
#66 0x40d50ff7 in NSGetModule ()
#67 0x40b99f36 in NSGetModule ()
#68 0x409bcda5 in NSGetModule ()
#69 0x409bcd4d in NSGetModule ()
#70 0x409bcd4d in NSGetModule ()
#71 0x409cad8a in NSGetModule ()
#72 0x409bb90d in NSGetModule ()
#73 0x414401ca in nsWidget::DispatchEvent ()
#74 0x414400f5 in nsWidget::DispatchWindowEvent ()
#75 0x4143e5b1 in nsWidget::OnInput ()
#76 0x414394cf in handle_key_release_event ()
#77 0x414397c9 in handle_gdk_event ()
#78 0x414396ca in handle_gdk_event ()
#79 0x405825cb in gdk_event_dispatch ()
#80 0x405b0be6 in g_main_dispatch ()
#81 0x405b11a1 in g_main_iterate ()
#82 0x405b1341 in g_main_run ()
#83 0x404d6859 in gtk_main ()
#84 0x414331da in nsAppShell::Run ()
#85 0x40fcfc4a in NSGetModule ()
#86 0x804b20c in JS_PushArguments ()
#87 0x804b523 in JS_PushArguments ()
#88 0x402f7cb3 in __libc_start_main (main=0x804b3a0 <JS_PushArguments+7348>, 
    argc=1, argv=0xbffff824, init=0x804938c <_init>, fini=0x804c284 <_fini>, 
    rtld_fini=0x4000a350 <_dl_fini>, stack_end=0xbffff81c)
    at ../sysdeps/generic/libc-start.c:78
Keywords: crash
Selected text anywhere -> click a link -> crash. (same backtrace as above)
Using Ctrl+U (another Unix favorite) also creates the same result, without
requiring the actual selection of text. If done someplace other than the URL
bar, in fact, Ctrl+U will crash the browser immediately- in the URL bar it won't
crash until enter is hit.
IMHO, this is a blocker- it makes it difficult to use fields or enter URLs on
Linux, which makes the browser not-quite-but-nearly unusable for most people. 
CC pinkerton since he touched this code as well. Nominate for dogfood.
Keywords: dogfood
Settin severity to blocker since this makes mozilla unusable.
Severity: critical → blocker
pavlov was the last one to check in major changes to clipboard code..
*** Bug 35963 has been marked as a duplicate of this bug. ***
checked in fix
Status: NEW → RESOLVED
Closed: 24 years ago
*** Bug 35973 has been marked as a duplicate of this bug. ***
*** Bug 35979 has been marked as a duplicate of this bug. ***
Verified on Linux build 2000.04.16.06-M15 and 2000.04.17.16-M16.
Status: RESOLVED → VERIFIED
mid-air collision ? / bugzilla cleanup
Reopening (current State: verfied and no resolution)
Status: VERIFIED → REOPENED
fixed
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
verfied
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.