fix for clipboard crashing (bug #35954)